--- a/breencf-portfolio/package.json
+++ b/breencf-portfolio/package.json
@@ -2,7 +2,7 @@
   "name": "breencf-portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "breencf.github.io",
+  "homepage": "breencf.com",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
