package json tinkering

--- a/breencf-portfolio/package.json
+++ b/breencf-portfolio/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "breencf.github.io",
+  "name": "breencf-portfolio",
   "version": "0.1.0",
   "private": true,
   "homepage": "breencf.github.io",
